# ai-agent-analytics

./: .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: default.yaml
src/: app.py
tests/: conftest.py
tests/component/: test_partial_mcp_connectivity.py
tests/unit/: test_routes_auth.py
