[project]
name = "ai-agent-analytics"
version = "0.4.0"
description = "Enterprise AI Platform — Analytics Agent (LangGraph + FastAPI orchestrator)"
requires-python = ">=3.11"
dependencies = [
    "enterprise-ai-platform-sdk[fastapi,postgres-checkpointer] @ git+ssh://git@github.com/narisun/ai-platform-sdk.git@v0.4.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests (no I/O, no Docker)",
    "component: multi-class tests with faked external systems",
    "application: create_app(deps) + TestClient",
    "integration: docker-compose stack required",
]
